@@ -1,7 +1,8 @@
-SRC += 	libreplace/memdup.c \
-	libreplace/catstr.c \
-	libreplace/fexist.c \
-	libreplace/ltrim.c \
-	libreplace/rtrim.c
+libreplace_SRC += 	memdup.c \
+			catstr.c \
+			fexist.c \
+			ltrim.c \
+			rtrim.c
 SRC += $(patsubst %,libreplace/%,$(LTLIBOBJS:.lo=.c))
+SRC += $(patsubst %,libreplace/%,$(libreplace_SRC))
 
