@@ -1,5 +1,6 @@
 #include <sys/types.h>
 #include <stdlib.h>
+#include <string.h>
 
 char * rtrim(char * str)
 {
